# gorgeous-stew

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  scraper.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: changelog.yml  python-app.yml  quality-checks.yml
config/: iba-cocktail-list-scrape-config.json  wikipedia-cocktail-list-scrape-config.json
data/: README.md
data/json/: .gitignore
src/: main.py
src/gorgeous_stew/: config.py  content_types.py  factories.py  fileutils.py  model.py  parsers.py  pipeline.py  scrapers.py  transformers.py
src/gorgeous_stew/iba/: __init__.py  parsers.py  transformers.py
src/gorgeous_stew/wikipedia/: __init__.py  parsers.py
src/scraper/: LICENSE  __init__.py  factories.py  fileutils.py  main.py  model.py  parsers.py  pipeline.py  pydocstring.md  scrapers.py  temp.html  transformers.py
src/scraper/demo/: helper.py
src/scraper/iba/: parsers.py  transformers.py
src/scraper/mock_iba/: __init__.py  parsers.py
tests/: test_demo.py  test_main.py
tests/gorgeous_stew/: test_factories.py  test_fileutils.py  test_model.py
tests/scraper/: test_factories.py  test_fileutils.py
