[project]
name = "gorgeous-stew"
version = "0.1.0"
description = "A config-driven web scraping pipeline app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "types-requests>=2.32.4.20250611",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pydoclint>=0.6.6",
    "pytest>=8.4.0",
    "ruff>=0.12.1",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D211",  # blank-line-before-class (pydocstyle)
    "D212",  # multi-line-summary-second-line (pydocstyle)
    "COM812",  # missing-trailing-comma (flake8-commas); handled by ruff format
    "D203",   # incorrect-blank-line-before-class (pydocstyle); handled by ruff format

    "TD002",  # missing author in TODO
    "TD003",  # missing issue link in TODO
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
    "src/gorgeous_stew/**/*.py",
    # exclude tests for type checking "tests/**/*.py",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tools.setuptools.package-dir]
gorgeous-stew="src/gorgeous_stew"
